make tests java8 compatible